[package]
name = "vulkan-study"
version = "0.1.0"
authors = ["chun <yasashi-i@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
winit = "0.24.0"
thiserror = "1.0.23"
#thiserror = {git = "https://github.com/dtolnay/thiserror"}
anyhow = "1.0"
#vk-shader-macros = {git = "https://github.com/Ralith/vk-shader-macros"}
vk-shader-macros = "0.2.6"